# lsm9ds1

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/raspi/: Cargo.toml
examples/raspi/src/: main.rs
examples/stm32l0_i2c/: Cargo.toml  memory.x
examples/stm32l0_i2c/.cargo/: config
examples/stm32l0_i2c/src/: main.rs
src/: accel.rs  configuration.rs  fifo.rs  gyro.rs  interrupt.rs  lib.rs  mag.rs  register.rs
src/interface/: fake_interface.rs  i2c.rs  mod.rs  spi.rs
src/interrupts/: accel_int.rs  config.rs  gyro_int.rs  mag_int.rs  mod.rs  pins_config.rs
tests/: lsm9ds1.rs
